--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
 <author_id>:
   name: Ann Naser Nabil
   twitter: https://x.com/ann_naser
-  url: https://Facebook.com/inability.ann
+  url: https://Facebook.com/nabil.ann
