--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
 <author_id>:
   name: Ann Naser Nabil
   twitter: ann_naser
-  url: https://x.com/ann_naser
+  url: https://github.com/AnnNaserNabil
