--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ title: Ann Naser Nabil # the main title
 
 tagline: My personal Website # it will display as the subtitle
 
-description: >- # used by seo meta and the atom feed
- Somewhere i write and think 
+description: >- # used by SEO meta and the Atom feed  
+ Exploring the intersection of data, creativity, and philosophy—one thought, one insight, one breakthrough at a time.  
+
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -44,8 +45,8 @@ social:
     - https://twitter.com/ann_naser # change to your Twitter homepage
     - https://github.com/AnnNaserNabil # change to your GitHub homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.facebook.com/nabil.ann
+    https://www.linkedin.com/in/ann-naser-nabil
 
 # Site Verification Settings
 webmaster_verifications:
