--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn: "https://annnasernabil.github.io/assets/images/favicon.png"
+cdn: 
 
 
 # the avatar on sidebar, support local or CORS resources
