--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-B28PRWTGRK
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
