--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Ann Naser Nabil # the main title
 favicon: /assets/images/favicon.ico  # Adjust the path if needed
 
 
-tagline: My personal Website # it will display as the subtitle
+tagline: My Portfolio # it will display as the subtitle
 
 description: >- # used by SEO meta and the Atom feed  
  Exploring the intersection of data, creativity, and philosophy—one thought, one insight, one breakthrough at a time.  
